--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu-active"><a href="#hero">Home</a></li>
-          <li><a href="#about">Code</a></li>
+          <li><a href="https://github.com/venkat1702/Spam-Detection">Code</a></li>
          <li><a href="https://www.linkedin.com/in/yashwanth-venkat-743172190/">Contact</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
