--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <a href="#hero"><img src="static/img/logo.png" alt="" title="" /></img></a>
+        <a href="#hero"><img src="static/img/logo.png"></img></a>
       </div>
 
       <nav id="nav-menu-container">
